--- a/Public/addProduct.html
+++ b/Public/addProduct.html
@@ -26,7 +26,9 @@
         <p class="alert-msg">Error message</p>
     </div>
 
+    <a href="/">
     <img src="../img/logo-green.png" class="logo" alt="">
+    </a>
 
     <div class="form">
         <input type="text" id="product-name" maxlength="50" placeholder="product name">
@@ -35,12 +37,12 @@
 
         <div class="product-info">
             <div class="product-image">
-                <p class="text">product image</p>
+                <p class="text">Product image</p>
             </div>
             <div class="upload-image-section">
                 <div class="upload-image-section-title">
                     <img src="../img/camera-icon.png" alt="">
-                    <p class="text">upload images</p>
+                    <p class="text">Upload images</p>
                 </div>
                 <form>
                     <div class="upload-catalogue">
