--- a/Public/product.html
+++ b/Public/product.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product</title>
 
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/product.css">
+    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/product.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
@@ -24,7 +24,7 @@
 
     <section class="product-details">
         <div class="image-slider">
-<!--            <img src="img/product image 1.png" class="active" alt="">-->
+            <img src="img/product image 1.png" class="active" alt="">
             <div class="product-images">
                 <img src="img/product image 1.png" class="active" alt="">
                 <img src="img/product image 2.png" alt="">
@@ -65,7 +65,7 @@
 
     <section class="detail-des">
         <h2 class="heading">description</h2>
-        <p class="des">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium corporis culpa deserunt eos eum excepturi facilis fuga fugit harum illum laboriosam, laudantium libero necessitatibus nemo numquam obcaecati officia officiis omnis praesentium qui ratione rerum sint veniam. A, animi asperiores culpa cum debitis ipsam maxime quis saepe? Accusamus, animi dolorem fugit harum iusto nesciunt perferendis placeat reprehenderit ut. Accusantium asperiores aut blanditiis consequuntur, corporis doloremque dolores facere hic incidunt, itaque laborum modi, molestiae necessitatibus nihil pariatur perspiciatis placeat porro quasi rerum sint! Aut cupiditate dicta ducimus ex expedita, iste laboriosam maiores neque odit qui repellendus suscipit veniam vitae. Aspernatur eius iste laboriosam, molestiae mollitia nam odio repudiandae sit? Eligendi sed tenetur totam ut vitae! Amet commodi maiores mollitia, optio soluta sunt unde! Architecto autem cum dignissimos error fugiat impedit incidunt libero, molestiae nulla numquam omnis possimus provident qui rem soluta temporibus totam unde voluptatem. Culpa dolor, eligendi neque quod reiciendis tempore tenetur! Amet facere itaque modi quibusdam quisquam saepe sed! Architecto assumenda dolore doloribus eaque excepturi illo neque repellendus sunt? Ad aliquid amet aperiam aspernatur dignissimos enim esse est, exercitationem expedita facere fugiat illo inventore maiores modi molestias nihil nostrum provident quis repellendus voluptatum! Aut iste laborum natus quisquam reiciendis, sed.</p>
+        <p class="des">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium corporis culpa deserunt eos eum excepturi facilis fuga fugit harum illum laboriosam, laudantium libero necessitatibus nemo numquam obcaecati officia officiis omnis praesentium qui ratione rerum sint veniam. </p>
     </section>
 
     <section class="container-for-card-slider"></section>
@@ -176,10 +176,10 @@
 
     <footer></footer>
 
-    <script src="js/nav.js"></script>
-    <script src="js/footer.js"></script>
-    <script src="js/home.js"></script>
-    <script src="js/product.js"></script>
+    <script src="../js/nav.js"></script>
+    <script src="../js/footer.js"></script>
+    <script src="../js/home.js"></script>
+    <script src="../js/product.js"></script>
 
 </body>
 </html>
