--- a/Public/cart.html
+++ b/Public/cart.html
@@ -23,24 +23,24 @@
 
     <div class="cart-section">
         <div class="product-list">
-            <p class="section-heading">your cart</p>
+            <p class="section-heading">Your cart</p>
             <div class="cart">
                 <!-- cart product goes here -->
 <!--                <img src="img/cart-empty.png" class="empty-card-img" alt="">-->
-                <div class="sm-product">
-                    <img src="img/product image 1.png" class="sm-product-img" alt="">
-                    <div class="sm-text">
-                        <p class="sm-product-name">Brand</p>
-                        <p class="sm-des">This is short line about</p>
-                    </div>
-                    <div class="item-counter">
-                        <button class="counter-btn decrement">-</button>
-                        <p class="item-count">1</p>
-                        <button class="counter-btn increment">+</button>
-                    </div>
-                    <p class="sm-price">$20</p>
-                    <button class="sm-delete-btn"><img src="img/close.png" alt=""></button>
-                </div>
+<!--                <div class="sm-product">-->
+<!--                    <img src="img/product image 1.png" class="sm-product-img" alt="">-->
+<!--                    <div class="sm-text">-->
+<!--                        <p class="sm-product-name">Brand</p>-->
+<!--                        <p class="sm-des">This is short line about</p>-->
+<!--                    </div>-->
+<!--                    <div class="item-counter">-->
+<!--                        <button class="counter-btn decrement">-</button>-->
+<!--                        <p class="item-count">1</p>-->
+<!--                        <button class="counter-btn increment">+</button>-->
+<!--                    </div>-->
+<!--                    <p class="sm-price">$20</p>-->
+<!--                    <button class="sm-delete-btn"><img src="img/close.png" alt=""></button>-->
+<!--                </div>-->
             </div>
             <p class="section-heading">your wishlist</p>
             <div class="wishlist">
@@ -49,7 +49,7 @@
         </div>
         <div class="checkout-section">
             <div class="checkout-box">
-                <p class="text">your total bill,</p>
+                <p class="text">Your total bill,</p>
                 <h1 class="bill">$00</h1>
                 <a href="/checkout" class="checkout-btn">checkout</a>
             </div>
