Revert "Refactor ver 3 (#12)"
This reverts commit 4b5ba69feb950830350445dffc09c8b55539e121.

--- a/Public/checkout.html
+++ b/Public/checkout.html
@@ -57,6 +57,7 @@
                 <p class="text">Your total bill,</p>
                 <h1 class="bill">$00</h1>
                 <button class="place-order-btn">place order</button>
+<!--                <a href="/checkout" class="checkout-btn">checkout</a>-->
 
             </div>
         </div>
@@ -70,7 +71,7 @@
     <script src="js/cart.js"></script>
     <script src="js/checkout.js"></script>
     <script src="js/footer.js"></script>
-    <script src="js/token.js"></script>
+<!--    <script src="js/token.js"></script>-->
 
 </body>
 </html>
