--- a/Public/mail.html
+++ b/Public/mail.html
@@ -58,8 +58,8 @@
 </head>
 <body>
     <div>
-        <a href="/"><img src="img/logo-green.png" class="logo" alt=""></a>
-        <h1 class="heading">Dear user, <span>your order is successfully placed</span></h1>
+        <img src="img/logo-green.png" class="logo" alt="">
+        <h1 class="heading">dear user, <span>your order is successfully placed</span></h1>
         <button class="btn">check status</button>
     </div>
 </body>
