--- a/Public/seller.html
+++ b/Public/seller.html
@@ -68,7 +68,7 @@
         <!-- delete alert -->
         <div class="delete-alert">
             <div>
-                <button class="close-btn"><img src="img/close.png" alt=""></button>
+                <button class="close-btn"><img src="img/close.png" alt=""></img></button>
                 <img src="img/delete-warning.png" class="delete-svg" alt="">
                 <p class="text">Are you sure you want to delete this product?</p>
                 <button class="delete-btn">Delete</button>
@@ -93,9 +93,9 @@
         </div>
     </div>
 
-    <script src="js/token.js"></script>
-    <script src="js/createProduct.js"></script>
-    <script src="js/seller.js"></script>
+<script src="js/token.js"></script>
+<script src="js/createProduct.js"></script>
+<script src="js/seller.js"></script>
 
 </body>
 </html>
