--- a/Public/index.html
+++ b/Public/index.html
@@ -19,14 +19,14 @@
 
     <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js">
         const firebaseConfig = {
-            apiKey: "AIzaSyBMfoNe9FWHdoqmlp6CNGwxG7KogbEkOWk",
-            authDomain: "vfecommerceapp.firebaseapp.com",
-            databaseURL: "https://vfecommerceapp-default-rtdb.firebaseio.com",
+            apiKey: "",
+            authDomain: "",
+            databaseURL: "",
             projectId: "vfecommerceapp",
-            storageBucket: "vfecommerceapp.appspot.com",
-            messagingSenderId: "29464199390",
-            appId: "1:29464199390:web:4730b39f7989ad7578424f",
-            measurementId: "G-S7TL73GQP0"
+            storageBucket: "",
+            messagingSenderId: "",
+            appId: "",
+            measurementId: ""
         };
 
         firebase.initializeApp(firebaseConfig);
