ver 4 in progress

--- a/Public/login.html
+++ b/Public/login.html
@@ -28,7 +28,7 @@
 
     <div class="container">
         <a href="/">
-            <img class="logo" src="img/logo-green.png" class="brand-logo" alt="">
+            <img class="logo" src="img/logo-green.png" alt="">
         </a>
         <div>
             <input type="email" autocomplete="off" id="email" placeholder="email">
