--- a/Public/index.html
+++ b/Public/index.html
@@ -420,9 +420,9 @@
     <script src="js/home.js"></script>
     <script src="js/product.js"></script>
 
-<!--    <script>-->
-        getProduct('Men Tshirt').tnen(data => createProductSlider(data, '#men-tshirt-products', 'Men T-shirt'))
-        getProduct('Men Tshirt').tnen(data => createProductSlider(data, '#men-tshirt-products-2', 'Men T-shirt-2'))
-<!--    </script>-->
+    <script>
+        getProducts('Men Tshirt').tnen(data => createProductSlider(data, '#men-tshirt-products', 'Men T-shirt'))
+        getProducts('Men Tshirt').tnen(data => createProductSlider(data, '#men-tshirt-products-2', 'Men T-shirt-2'))
+    </script>
 </body>
 </html>
