Refactor: code fix

--- a/Public/addProduct.html
+++ b/Public/addProduct.html
@@ -46,13 +46,13 @@
                 </div>
                 <form>
                     <div class="upload-catalogue">
-                        <input type="file" value="upload" class="file-upload" accept="image/*" id="first-file-upload-btn" hidden>
+                        <input type="file" value="upload" class="fileupload" accept="image/*" id="first-file-upload-btn" hidden>
                         <label for="first-file-upload-btn" class="upload-image"></label>
-                        <input type="file" value="upload" class="file-upload" accept="image/*" id="second-file-upload-btn" hidden>
+                        <input type="file" value="upload" class="fileupload" accept="image/*" id="second-file-upload-btn" hidden>
                         <label for="second-file-upload-btn" class="upload-image"></label>
-                        <input type="file" value="upload" class="file-upload" accept="image/*" id="third-file-upload-btn" hidden>
+                        <input type="file" value="upload" class="fileupload" accept="image/*" id="third-file-upload-btn" hidden>
                         <label for="third-file-upload-btn" class="upload-image"></label>
-                        <input type="file" value="upload" class="file-upload" accept="image/*" id="fourth-file-upload-btn" hidden>
+                        <input type="file" value="upload" class="fileupload" accept="image/*" id="fourth-file-upload-btn" hidden>
                         <label for="fourth-file-upload-btn" class="upload-image"></label>
                     </div>
                 </form>
