--- a/Public/index.html
+++ b/Public/index.html
@@ -22,7 +22,7 @@
             apiKey: "",
             authDomain: "",
             databaseURL: "",
-            projectId: "vfecommerceapp",
+            projectId: "",
             storageBucket: "",
             messagingSenderId: "",
             appId: "",
@@ -420,9 +420,9 @@
     <script src="js/home.js"></script>
     <script src="js/product.js"></script>
 
-<!--    <script>-->
+    <script>
         getProduct('Men Tshirt').tnen(data => createProductSlider(data, '#men-tshirt-products', 'Men T-shirt'))
         getProduct('Men Tshirt').tnen(data => createProductSlider(data, '#men-tshirt-products-2', 'Men T-shirt-2'))
-<!--    </script>-->
+    </script>
 </body>
 </html>
