Feractor: Slider products cards

--- a/Public/addProduct.html
+++ b/Public/addProduct.html
@@ -32,8 +32,8 @@
 
     <div class="form">
         <input type="text" id="product-name" maxlength="50" placeholder="product name">
-        <input type="text" id="product-short-des" maxlength="100" placeholder="short product description">
-        <textarea id="product-des" placeholder="detailed product description"></textarea>
+        <input type="text" id="short-des" maxlength="100" placeholder="short product description">
+        <textarea id="des" placeholder="detailed product description"></textarea>
 
         <div class="product-info">
             <div class="product-image">
