--- a/Public/seller.html
+++ b/Public/seller.html
@@ -59,9 +59,12 @@
 
     <!--product list-->
     <div class="product-listing hide">
+        <a href="/">
+            <img src="img/logo-green.png" class="logo" alt="">
+        </a>
         <div class="add-product">
             <p class="add-product-title">Add product</p>
-            <button class="btn" onclick="location.href ='/add-product'">Add product</button>
+            <button class="btn" onclick="location.href = '/add-product'">Add product</button>
         </div>
         <img src="img/no-products.png" class="no-product-image hide" alt="">
 
