--- a/Public/index.html
+++ b/Public/index.html
@@ -19,14 +19,14 @@
 
     <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js">
         const firebaseConfig = {
-            apiKey: "apiKey",
-            authDomain: "authDomain",
-            databaseURL: "databaseURL",
-            projectId: "projectId",
-            storageBucket: "storageBucket",
-            messagingSenderId: "messagingSenderId",
-            appId: "appId",
-            measurementId: "measurementId"
+            apiKey: process.env.API_KEY,
+            authDomain: process.env.AUTH_DOMAIN,
+            databaseURL: process.env.DATABASE_URL,
+            projectId: process.env.PROJECT_ID,
+            storageBucket: process.env.PROJECT_ID,
+            messagingSenderId: process.env.MESSAGING_SENDER_ID,
+            appId: process.env.APP_ID,
+            measurementId: process.env.MEASUREMENT_ID
         };
 
         firebase.initializeApp(firebaseConfig);
@@ -81,7 +81,7 @@
 
     <!--  cards container  -->
     <section class="product">
-        <h2 class="product-category">best selling</h2>
+        <h2 class="product-category">New Arrivals</h2>
         <button class="pre-btn"><img src="img/arrow.png" alt=""></button>
         <button class="nxt-btn"><img src="img/arrow.png" alt=""></button>
         <div class="product-container">
@@ -92,7 +92,7 @@
                     <button class="card-btn">add to wishlist</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">EB&IVE</h2>
+                    <h2 class="product-brand">brand</h2>
                     <p class="product-short-des">Diaz luxurious linen Blouse</p>
                     <span class="price">$134.95</span><span class="actual-price">$175.45</span>
                 </div>
@@ -184,7 +184,7 @@
         </div>
     </section>
 
-    <section id="women-tshirt-products"></section>
+    <section id="best-selling-products"></section>
     <!--  COLLECTIONS  -->
     <section class="collection-container">
         <a href="/women" class="collection">
@@ -410,6 +410,7 @@
             </div>
         </div>
     </section>
+    <section class="container-for-card-slider"></section>
     <section id="men-tshirt-products"></section>
     <footer></footer>
 
@@ -419,7 +420,7 @@
     <script src="js/product.js"></script>
 
     <script>
-        // getProducts('Best selling').then(data => createProductSlider(data, '#best-selling-products', 'Best selling'))
+        getProducts('Best selling').then(data => createProductSlider(data, '#best-selling-products', 'Best selling'))
         getProducts('Women Tshirt').then(data => createProductSlider(data, '#women-tshirt-products', 'Women T-shirt'))
         getProducts('Men Tshirt').then(data => createProductSlider(data, '#men-tshirt-products', 'Men T-shirt'))
     </script>
